# scraper_server_swagger/api/swagger.yaml
@@ -16,18 +16,19 @@ paths:
       - "/"
       summary: "Provide search from"
       description: "Get Search URL form"
+      x-swagger-router-controller: "search"
       operationId: "getForm"
       parameters: []
       responses:
         200:
           description: "Form is sent"
-      x-swagger-router-controller: "search"
   /api/search/:
     get:
       tags:
       - "/api/search/"
       summary: "Search dom"
       description: "Search dom elements by URL.\n"
+      x-swagger-router-controller: "search"
       operationId: "searchDom"
       parameters:
       - name: "url"
@@ -53,16 +54,14 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/Search"
-        default:
-          description: "Unexpected error"
-          schema:
-            $ref: "#/definitions/Error"
-      x-swagger-router-controller: "search"
+        500:
+          description: "Internal Server Error"
     post:
       tags:
       - "/api/search/"
       summary: "Search form processing"
       description: "Search URL using form"
+      x-swagger-router-controller: "search"
       operationId: "searchWithForm"
       parameters:
       - in: "body"
@@ -72,14 +71,16 @@ paths:
         schema:
           $ref: "#/definitions/SearchBody"
       responses:
-        200:
+        302:
           description: "Search is accepted"
-      x-swagger-router-controller: "search"
+        500:
+          description: "Error: form has empty fields"
     delete:
       tags:
       - "/api/search/"
       summary: "Delete search request"
       description: "Delete search request"
+      x-swagger-router-controller: "search"
       operationId: "deleteSearchRequest"
       parameters:
       - name: "url"
@@ -105,7 +106,6 @@ paths:
           description: "Unexpected error"
           schema:
             $ref: "#/definitions/Error"
-      x-swagger-router-controller: "search"
   /api/search/list/:
     get:
       tags:
@@ -113,6 +113,7 @@ paths:
       summary: "List of  search requests"
       description: "The /api/search/list/ endpoint returns history of all search requests\
         \ executed\n"
+      x-swagger-router-controller: "search"
       operationId: "listSearchRequests"
       parameters: []
       responses:
@@ -126,7 +127,6 @@ paths:
           description: "Unexpected error"
           schema:
             $ref: "#/definitions/Error"
-      x-swagger-router-controller: "search"
 definitions:
   List:
     type: "string"
@@ -139,9 +139,8 @@ definitions:
         description: "Found elements."
   SearchBody:
     required:
-    - "element"
-    - "level"
     - "url"
+    - "element"
     properties:
       url:
         type: "string"
